Remove background color setup for EnterpriseStartupDialog

There is no need to setup the background color in the dialog.
So that it keeps the same background of DialogClientView.

Bug: 860541
Change-Id: Ia910fedc75e34fa98ec8fafaa9e775bbdb4e8ee6
Reviewed-on: https://chromium-review.googlesource.com/1128320
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Owen Min <zmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573360}
Former-commit-id: b56a1c30b64b87b1774beba5ca517a677f5daa30